fixed posture corrector for dark mode

--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -4,22 +4,20 @@
     }
 }
   
-/* The line you need to change is here:
-   Change background: #164536; to background: transparent; */
 .background {
     position: fixed;
     width: 100vw;
     height: 100vh;
     top: 0;
     left: 0;
-    background: #164536;  /* <-- This is the line you need to change to transparent */
+    background: #164536;
     overflow: hidden;
     z-index: -1;
     transition: background-color 0.3s ease;
 }
 
 [data-theme='dark'] .background {
-    background: #2c1b3d;
+    background: #9c27b0;  /* Changed to purple in dark mode */
 }
   
 .background span {
